feat: enhance dataset file download functionality to zip all files and improve path validation (#285)